--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "description": "A 3D tool powered by Three.js and bash",
   "dependencies": {
+    "sudo-3d": "^9.0.0",
     "three": "^0.172.0"
   },
   "devDependencies": {
