--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
-@your-username:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=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
+@sudo-self:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
+
